Removing LocalChannel architecture
All
***
- Clean dependencies (not used)
- Fix memory
- Change to Guava where possible
- Fix various coding issues

Digest
******
- Fix SecureRandom for Windows (Sun provider) and Linux (urandom)
- Add Global configuration for SecureRandom
- Add support for TLS 1.2 using Native Netty Uber jar, but reverting to
 standard of JRE if not possible

Common
******
- Finalize GUID and IntegerUUID implementation (new global transfer uid
 and current localchannel uuid) (deprecation of UUID)
- Fix WaarpShutdownHook exit issue
- Add ThreadLocalRandom for Java 6

R66
***
- Fix Threads usage (roughly R66: 2xCLIENT + 2xRUNNER(LIMIT) + 1xSERVER,
HTTP/REST: 1xCLIENT)
- Remove LocalChannel and associated threads (LocalChannel tasks now are
 based on the map of requests and simulation of localChannels through
  method calls and using LocalChannelReference object)
- Fix memory (mainly KeepAlive and Startup/Validation)
- Add simple Junit (Selenium) on Monitor and Admin Web
- Add Junits on snmp and http (UI) and monitoring
- Test with just start and stop for every DB types (notice: Oracle Bad Driver
 since Java 6 differs on jdbc url)
- Add Junits for Java Tasks (AddDigest, AddUuid)
- Add Junits for SpooledDirectoryTransfer
- Extract XML definition (deduplication of codes with Proxy)
- OWASP security fixes
- checkParameters on REST/RESTV2/HTTP method
- Fix issue on Commander not found any request of transfer

R66 Proxy
*********
- Add simple Junit (Selenium) on Monitor and Admin Web
- Add Junits

GatewayKernel
*************
- Add simple Junit Rest
- Improve CPU usage (mainly StringBuilder)
- checkParameters on REST/HTTP method

FTP
***
- Change SSL to TLS in FTPS connection

GWFTP
*****
- Fix memory (mainly KeepAlive)
- Add Junits